Although not listed in the backtrace, I'm pretty sure that the crash was triggered by QList::takeFirst(). This method seems to assume that a list is not empty, so we need to check for an empty list.

BUG:209923

svn path=/trunk/extragear/graphics/digikam/; revision=1032951